--- a/uas_web1/styles.css
+++ b/uas_web1/styles.css
@@ -75,7 +75,7 @@ footer {
     text-align: center;
     padding: 10px;
     bottom: 0;
-    position: fixed;
+    position: sticky;
     width: 100%;
     box-sizing: border-box;
 }
@@ -368,3 +368,4 @@ th {
     }
 
 }
+
